src/tess/tl/test/fail/test_fail_const_value_closure_reassign.tl
#module main

main() {
    x: Const := 10

    f := () {
        x = 20
        x
    }
    f()
}
